--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,10 @@
+{% extends 'base.html' %}
+
+{% block title %}URL Shortener{% endblock %}
+
+{% block main %}
+
 <h1>URL Shortener</h1>
-
-{% for message in get_flashed_messages() %}
-<h2>{{ message }}</h2>
-{% endfor %}
-
 
 <form action="your-url" method="post">
   <label for='url'>Website URL</label>
@@ -25,3 +26,14 @@
   <br>
   <input type='submit' value="Shorten">
 </form>
+
+{% if codes %}
+<h2>Codes you have created:</h2>
+<ul>
+  {% for code in codes %}
+  <a href="{{ url_for('redirect_to_url', code=code) }}"><li>{{code}}</li></a>
+  {% endfor %}
+</ul>
+{% endif %}
+
+{% endblock %}
